# online_store

./: README.md  data.json  pyproject.toml
catalog/: admin.py  forms.py  models.py  urls.py  views.py
catalog/management/commands/: fill.py
catalog/migrations/: 0001_initial.py  0002_alter_product_date_creation_and_more.py  0003_alter_product_date_creation_and_more.py  0004_alter_product_date_modified.py  0005_product_is_active.py  0006_alter_product_description_alter_product_title.py  0007_version.py  0008_product_owner.py
catalog/templates/catalog/: merchandise.html  product_form.html
catalog/templates/catalog/includes/: inc_catalog_menu.html
catalog/templatetags/: my_tags.py
config/: settings.py  urls.py
materials/: models.py  urls.py  views.py
materials/migrations/: 0001_initial.py  0002_alter_material_date_creation.py  0003_alter_material_counter_views_and_more.py  0004_alter_material_counter_views.py
users/: views.py
