[tool.poetry]
name = "intenet-shop"
version = "0.1.0"
description = ""
authors = ["Vadim Kravcov <v.sem4ik@mail.ru>"]
readme = "README.md"
packages = [{include = "intenet_shop"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.5"
psycopg2-binary = "^2.9.7"
pillow = "^10.0.1"
ipython = "^8.15.0"
pytils = "^0.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
